Fixed font-weight
Black was too much, changed button font-weight to bold, instead.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -146,7 +146,6 @@ section[role=coming-soon] {
         box-shadow: 0 3px 0 0 $clr-mudBrown;
         @include font-brandon;
         font-size: 18px;
-        font-weight: 900;
         letter-spacing: 1px;
         color: $clr-white;
 
